refactor: 💡 Refactored /request and /did APIs
